# sglang-multigpu-router-rl-infra

./: .gitignore  README.md  SGLang_Router_to_RL_Infra_Implementation_Plan_6xA6000.md  baseline_report.md  hardware_topology.txt  known_issues.md  next_week_plan.md  pyproject.toml
configs/: maturity_slo.yaml  mlsys_suite_3policies_soft.json  mlsys_suite_3policies_soft_sweep.json  mlsys_suite_3policies_soft_sweep_rate32281p2.json  mlsys_suite_3policies_soft_sweep_rate32281p2_opt30b_4w_tp2.json  production_slo.yaml  rl_router_4xa6000.yaml  rl_router_6xa6000.yaml  slime_qwen3_4b_4xa6000.env  slime_qwen3_4b_4xa6000.pip-freeze.txt
docker/: Dockerfile.router  environment.lock.md
docs/: 4gpu_deployment.md  architecture.md  chaos_recovery_runbook.md  correctness.md  experiment_protocol.md  implementation_status.md  production_readiness.md  technical_report.md  troubleshooting.md  upstream_pr_plan.md
integrations/: __init__.py  bounded_pipeline.py  chaos.py  sglang_adapter.py  slime_adapter.py  slime_bounded_train.py  weight_update_executor.py
patches/: slime_v021_bounded_async_weight_versions.patch  slime_v021_fsdp_optional_ring_flash_attn.patch  slime_v021_sglang_actor_chaos.patch
rewards/: __init__.py  math_rule_reward.py
router/: __init__.py  app.py  policy.py  rl_api.py
scripts/: aggregate_paired_comparisons.py  check_gpu_availability.py  check_gpu_layout.py  cleanup_owned_gpu_processes.py  collect_system_info.sh  compare_strict_bounded_runs.py  generate_golden_trace.py  guard_gpu_ownership.py  install_slime_qwen3_4b_deps.sh  launch_rl_router.sh  (+35 more)
(+44 files in other folders)
