[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sglang-rl-rollout-router"
version = "0.2.0"
description = "Group-, cache-, and policy-version-aware router for RL rollouts"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110,<1",
  "httpx>=0.27,<1",
  "psutil>=5.9,<8",
  "pyyaml>=6,<7",
  "uvicorn>=0.29,<1",
]

[project.optional-dependencies]
test = ["pytest>=8,<10"]

[tool.setuptools.packages.find]
include = ["router*", "integrations*", "rewards*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
